idk how many attempt fixing scrollbars

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
   scroll-behavior: smooth;
 }
 
-html{
+body{
   overflow-x: hidden;
 }
 
